Add static assets and dynamic CMS media, certificates, photos, and event videos support
